--- a/tobbfor.html
+++ b/tobbfor.html
@@ -10,7 +10,7 @@
     <div style="text-align: center">
     <script>
           //Több for egymásba ágyazása
-          magassag = 10;
+          magassag = Math.random()*10+5;
           for (let i = 0; i < magassag; i++)
             {
                 for (let j = 0; j< 2* i-1; j++)
