--- a/swicthvagyif.html
+++ b/swicthvagyif.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>ul > li { font-size:  20px;}</style>
+    <style>
+        ul>li {
+            font-size: 20px;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,8 +20,8 @@
     <h2>Mikor használjuk ? </h2>
     <img src="Picture 1.png" />
 
-<br/>
-    <h3><b>IF-ELSE :</b><br/></h3>
+    <br />
+    <h3><b>IF-ELSE :</b><br /></h3>
     <ul>
         <li> Ha a feltétel értéke teljesül vagy nem teljesül</li>
         <li> Boolean, igaz hamis érték</li>
@@ -26,13 +30,13 @@
         <li> Logikai operátorok használhatók</li>
     </ul>
     <br />
-    <h3><b>Switch case:</b></h3
+    <h3><b>Switch case:</b></h3>
     <ul>
-        <li> Ha a feltételek alapja fix érték, pl . hibakód, vagy böngészőtípus</li>
-        <li> A feltétel alapját a felhasználó definiálja,</li>
-        <li> HA több elem esetén is egyforma a kimenet</li>
-        <li> Legfontosabb : csak egy feltételt határozhatunk meg</li>
-        <li> Logikai operatorok nem támogatottak (||, &&, !)</li>
+    <li> Ha a feltételek alapja fix érték, pl . hibakód, vagy böngészőtípus</li>
+    <li> A feltétel alapját a felhasználó definiálja,</li>
+    <li> HA több elem esetén is egyforma a kimenet</li>
+    <li> Legfontosabb : csak egy feltételt határozhatunk meg</li>
+    <li> Logikai operatorok nem támogatottak (||, &&, !)</li>
     </ul>
 </body>
 
